<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BWR팀</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_two_buttons2ultra_msg"></string>
    <string name="action_bar_search">search</string>
    <string name="action_bar_share_with">share</string>
    <string name="action_bar_share">share</string>
    <string name="action_bar_sort">sort</string>
    <string name="action_bar_sort_size">size</string>
    <string name="action_bar_sort_alpha">alpha</string>
    <string name="menu_favor_list">bookmark</string>
    <string name="menu_favor">add to bookmark</string>
    <string name="menu_move_home">go home</string>
    <string name="mode_fullscreen">full screen</string>
    <string name="mode_lowProfile">layout fullscreen</string>
    <string name="mode_Layout_Profile">layout fullscreen</string>
    <string name="start_url">http://www.naver.com</string>
    <string name="show_all_pager_location">창 목록</string>
    <string name="change_home_to_here">홈 변경</string>
    <string name="move_to_designated_home">홈</string>
    <string name="favorite_list">즐겨찾기</string>
    <string name="add_to_bookmark">즐겨찾기 추가</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
