<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    <group android:id="@+id/show_tabs_group"
           android:checkableBehavior="single">
        <item android:id="@+id/show_tabs"
              android:title="@string/show_tabs"
              android:showAsAction="never" />
        <item android:id="@+id/hide_tabs"
              android:title="@string/hide_tabs"
              android:checked="true"
              android:showAsAction="never" />

        <item android:id="@+id/mode_fullscreen"
              android:title="@string/mode_fullscreen"
              android:checked="true"
              android:showAsAction="never" />
        <item android:id="@+id/mode_Layout_Profile"
              android:title="@string/mode_Layout_Profile"
              android:showAsAction="never" />

    </group>

-->
    <item android:id="@+id/add_to_bookmark"
          android:icon="@android:drawable/star_big_off"
          android:showAsAction="always"
          android:title="@string/add_to_bookmark"/>

    <item android:id="@+id/favorite_list"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:showAsAction="always"
          android:title="@string/favorite_list" />

    <item
        android:id="@+id/move_to_designated_home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:showAsAction="always"
        android:title="@string/move_to_designated_home"/>
    
    <item
        android:id="@+id/change_home_to_here"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="always"
        android:title="@string/change_home_to_here"/>
    
    <item
        android:id="@+id/show_all_pager_location"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="always"
        android:title="@string/show_all_pager_location"/>


</menu>

